# rankvotes

./: .env  .gitignore  Cargo.toml  Notes  README.md  Rocket.toml  schema.ddl
db/: db.sqlite
src/: main.rs  schema.rs
static/: base.html.tera  index.html.tera  index.html.tera.WORKING  vote.html.tera
