[package]
name = "rankvotes"
version = "0.0.1"
edition = "2018"
publish = false

[dependencies]
# Rocket webserver
rocket = "0.4.5"

# Serialization/Deserialization
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

# For connecting with the SQLite database
diesel = { version = "1.3", features = ["sqlite", "r2d2"] }

# Tools for processing results and creating voting rules/results 
itertools = "0.9"
rcir = "0.3.0"

[dependencies.rocket_contrib]
version = "0.4.5"
features = ["tera_templates", "diesel_sqlite_pool"]
